Name:           nix
Version:        0.0.1
Cabal-Version:  >= 1.6
License:        GPL
License-File:   LICENSE
Author:         Antti Salonen<ajsalonen at gmail dot com>
Maintainer:     Antti Salonen<ajsalonen at gmail dot com>
Copyright:      Antti Salonen 2010
Stability:      Unstable
Category:       Games
Synopsis:       Issue tracking system
Description:    Issue tracking system.
Build-type:     Simple

Executable nix
  Build-Depends:   base > 3 && < 5, haskell98,
                   bytestring>=0.9.0.0,
                   directory>=1.0.0.0,
                   EdisonCore>=1.2.0.0
  Main-is:         Nix.hs
  Hs-Source-Dirs:  src
  Ghc-options:     -Wall -fno-warn-missing-signatures

