Name:           nix
Version:        0.0.2
Cabal-Version:  >= 1.6
License:        GPL
License-File:   LICENSE
Author:         Antti Salonen<ajsalonen at gmail dot com>
Maintainer:     Antti Salonen<ajsalonen at gmail dot com>
Copyright:      Antti Salonen 2010
Stability:      Unstable
Category:       Games
Synopsis:       Issue tracking system
Description:    Issue tracking system.
Build-type:     Simple

Executable nix
  Build-Depends:   base > 3 && < 5, haskell98,
                   bytestring>=0.9.0.0,
                   directory>=1.0.0.0,
                   EdisonCore>=1.2.0.0,
                   old-locale>=1.0.0.0,
                   time>=1.1.0,
                   filepath>=1.1.0.0,
                   Glob>=0.5
  Main-is:         Nix.hs
  Hs-Source-Dirs:  src
  Ghc-options:     -Wall -fno-warn-missing-signatures

